Fixed small alignment issues on header

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -11,21 +11,25 @@ header {
     line-height: 4rem;
     font-size: 2.5rem;
     flex-direction: column;
-    .menu-icon {
-      display: flex;
-      font-size: 3rem;
-      padding-right: 3%;
-      align-items: center;
-      justify-content: space-between;
-    }
+
     #hamburger {
       display: none;
     }
-    #logo {
-      max-height: 40px;
-      padding-left: 3%;
-    }
+
   } 
+}
+
+.menu-icon {
+  display: flex;
+  font-size: 3rem;
+  padding-right: 3%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#logo {
+  max-height: 40px;
+  padding-left: 3%;
 }
 
 .menu {
@@ -39,13 +43,13 @@ header {
   transform-origin: 100% 0;
   transition: 0.2s;
   a {
-  display: block;
-  border-top: 2px solid $menu-border-mobile;
-  text-align: center;
-  }
+    display: block;
+    border-top: 2px solid $menu-border-mobile;
+    text-align: center;
+    }
   i {
-  color: $icon-colour;
-  }
+    color: $icon-colour;
+    }
 }
 
 input:checked + .menu {
@@ -60,33 +64,34 @@ input:checked + .menu {
 @media only screen and (min-width: 1008px) {
   /* For desktop: */ 
   nav {
-    width: 100%;
-    height: 100%;
-    line-height: 1rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: stretch;
-  }
-  .menu-icon {
-    width: 3vw;
-    height: 100%;
-    align-items: center;
-    #logo {
-      max-height: 50px;
-      &:hover {
-        background: $icon-hover;
-        border-radius: 10px;
-        animation: shake 0.8s;
+      width: 100vw;
+      height: 100%;
+      line-height: 1rem;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: stretch;
+      .menu-icon {
+        height: 100%;
+        align-items: center;
+        padding-right: 1%;
+           #logo {
+          max-height: 50px;
+          padding-left: 0;
+          &:hover {
+            background: $icon-hover;
+            border-radius: 10px;
+            animation: shake 0.8s;
+          }
+        }
+        label {
+          display: none;
+        }
       }
     }
-    label {
-      display: none;
-    }
-  }
   .menu {
     min-height: 10vh;
-    width: 96vw;
+    width: 93.5vw;
     border: none;
     transform: none;
     background: inherit;
@@ -95,11 +100,9 @@ input:checked + .menu {
     a {
       font-size: 1.9rem;
       padding: 1%;
-      display: block;
       width: 100%;
       border: inherit;
       &:hover {
-        // background: $desktop-menu-hover;        
         border: 5px solid $text-colour;
         i {
           color: $icon-hover;
