--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,7 +45,6 @@ h1, h2, h3 {
 // Grid set up for all pages
 
 .container {
-  width: 100vw;
   height: 100vh;
   display: grid;    
   grid-template-columns: repeat(12, 1fr);
